hamburger issue solve its not showing under 400 px width screen

--- a/responsive.css
+++ b/responsive.css
@@ -3,7 +3,6 @@
 
   .navigation {
     justify-content: space-between;
-    /* margin: 0 2rem; */
     padding: 0 2rem;
   }
 
@@ -16,7 +15,7 @@
   }
 
   .navigation .nav-toggele {
-    display: block;
+    display: block !important;
     font-size: 2.8rem;
     font-weight: 800;
   }
